[package]
name = "ferrisfetch"
version = "1.0.0"
edition = "2021"
authors = ["NoHup-lgtm"]
description = "A high-performance, concurrent web crawler and asset downloader."

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.18"
url = "2.5"
colored = "2.0"
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
indicatif = "0.17"
sanitize-filename = "0.5"
rand = "0.8" 